:lipstick: feat: Fix height on mobile and desktop

--- a/events/boracodar.dev/16-contacts-page/assets/css/style.scss
+++ b/events/boracodar.dev/16-contacts-page/assets/css/style.scss
@@ -128,6 +128,9 @@ body {
   flex-direction: column;
   gap: 5rem;
 
+  width: 100%;
+  height: 100%;
+
   padding: 4.8rem 4rem;
   background-color: var(--blue-800);
   color: var(--white);
@@ -167,5 +170,12 @@ body {
   .contacts-menu {
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
+  }
+
+  .list {
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    
+    height: auto;
   }
 }
